# formula-prompt

./: .gitignore  .stats.py.un~  LICENSE  README.md  econ.py  setup.cfg  stats.py  stats.py~
calculator_framework/: __init__.py
docs/: dev.md
examples/: __init__.py  econ.py  readme_example.py  stats.py
formula_prog/: __init__.py
formula_prompt/: __init__.py  core.py  inputs.py  navigation.py  setup.py  shared.py
formula_prompt/extensions/: memory.py
test/: main.py  utilities.py
