[metadata]
name = calculator_framework
version = 0.0.2
author = Martin Staadecker
author_email = machstg@gmail.com
description = A small library to let you build a custom calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/staadecker/calculator-framework
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6